--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>My GitHub Page</title>
-    
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>My GitHub Page</h1>
     <h2>Chick<span>Tech</span></h2>
+
+    <img src="images/chicky.png" />
+    <img src="images/cow.png" />
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
